css/style.css
body {
    font-size: 18px;
    font-family: "Open Sans", sans-serif; 
}

/* Global */

.container {
    width: 90%;
    margin: auto;
    overflow: hidden;
}

.container-2 {
    width: 87%;
    margin: auto;
}

.body-div {
    box-shadow: 0px 0px 20px -9px hsl(210, 9%, 78%);
    margin-bottom: 40px;
    min-height: 430px;
    border-radius: 15px;
}

/* Showcase section */

#showcase {
    background: url("/images/bg-hero-desktop.svg");
    background-color: hsl(208, 11%, 55%);
    padding-bottom: 70px;
    margin-bottom: 150px;
}

#showcase header img {
    float: left;
    margin-top: 50px;
    height: 30px;
    width: 16%;
}

#showcase div#logo {
    width: 100%;
}

#showcase header button {
    float: right;
    margin-top: 35px;
    width: 16%;
    height: 50px;
    border-radius: 30px;
    font-size: 0.8em;
    font-weight: bold;
    box-shadow: 1px 3px 7px -4px hsl(208, 11%, 55%);
}

#showcase div#showcase-info {
    float: left;
    width: 40%;
    margin-top: 130px;
}

#showcase div#showcase-info h1 {
    font-size: 2.2em;
    font-family: "Poppins", sans-serif;
    font-weight: 600;
}

#showcase div#showcase-info button {
    width: 55%;
    height: 55px;
    border-radius: 30px;
    background: hsl(322, 100%, 66%);
    color: hsl(193, 100%, 96%);
    margin-top: 20px;
    font-size: 14px;
    font-weight: 500;
    border: none;
}

#showcase div#showcase-image {
    float: right;
    margin-top: 65px;
    padding-right: 5px;
}

#showcase div#showcase-image img {
    height: 490px;
}

/*  Main section */

#main {
    margin-top: 100px;
}

/* Grow Div */

#main div#grow h2, #main div#grow p {
    float: left;
    width: 40%;
}

#main div#grow h2 {
    margin-top: 150px;
    margin-left: 142px;
    margin-bottom: 5px;
    font-family: "Poppins", sans-serif;
}

#main div#grow p {
    margin-right: 200px;
    margin-left: 142px;
    color: hsl(208, 11%, 55%);
}

#main div#grow img {
    float: right;
    height: 340px;
    margin-right: 50px;
    margin-top: -260px;
}

/* Flow Div */

#main div#flow img {
    float: left;
    height: 300px;
    margin-top: 70px;
    margin-left: 120px;
} 

#main div#flow h2 {
    float: right;
    margin-right: 220px;
    margin-top: 160px;
    margin-bottom: -5px;
    font-family: "Poppins", sans-serif;
}

#main div#flow p {
    float: right;
    width: 41%;
    margin-right: 25px;
    color: hsl(208, 11%, 55%);
}

/* Users Div */

#main div#users h2, #main div#users p {
    float: left;
    width: 40%;
}

#main div#users h2 {
    margin-left: 125px;
    margin-top: 130px;
    margin-bottom: -5px;
    font-family: "Poppins", sans-serif;
}

#main div#users p {
    margin-right: 150px;
    margin-left: 125px;
    color: hsl(208, 11%, 55%);
}

#main div#users img {
    float: right;
    height: 300px;
    margin: -100px 25px 0 0;
}

/* Overlap div */

div#get-started {
    border: 1px solid red;
    width: 60%;
    margin: auto;
    min-height: 275px;
    text-align: center;
    border-radius: 20px;
    margin-top: 125px;
}

div#get-started h1 {
    margin-top: 70px;
    font-family: "Poppins", sans-serif;
    font-size: 1.8em;
}

div#get-started button {
    width: 50%;
    height: 80px;
    border-radius: 40px;
    background-color:hsl(322, 100%, 66%);
    color: white;
    font-family: "Open Sans", sans-serif; 
    font-size: 18px;
    font-weight: bold;
}

